--- a/alugueldecamposdefutebol/pom.xml
+++ b/alugueldecamposdefutebol/pom.xml
@@ -17,6 +17,13 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.jdatepicker</groupId>
+            <artifactId>jdatepicker</artifactId>
+            <version>1.3.4</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
             <version>3.0.3</version>
